@@ -24,7 +24,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <CommandLineParams Value="-t 13"/>
+        <CommandLineParams Value="-t 4"/>
       </local>
       <environment>
         <UserOverrides Count="1">
