@@ -3,22 +3,23 @@
   <ProjectSession>
     <Version Value="10"/>
     <BuildModes Active="Default"/>
-    <Units Count="96">
+    <Units Count="97">
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
-        <TopLine Value="57"/>
-        <CursorPos X="20" Y="85"/>
-        <UsageCount Value="137"/>
+        <CursorPos X="13" Y="14"/>
+        <UsageCount Value="138"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="567"/>
-        <CursorPos X="31" Y="598"/>
-        <UsageCount Value="137"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="610"/>
+        <CursorPos Y="630"/>
+        <UsageCount Value="138"/>
+        <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test1.pas"/>
@@ -26,7 +27,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="77"/>
         <CursorPos Y="88"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit2>
       <Unit3>
         <Filename Value="test2.pas"/>
@@ -34,7 +35,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="69"/>
         <CursorPos X="24" Y="91"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit3>
       <Unit4>
         <Filename Value="Test3.pas"/>
@@ -42,22 +43,23 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="78"/>
         <CursorPos X="71" Y="109"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit4>
       <Unit5>
         <Filename Value="Test4.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="104"/>
-        <CursorPos Y="119"/>
-        <UsageCount Value="137"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="58"/>
+        <CursorPos X="11" Y="81"/>
+        <UsageCount Value="138"/>
+        <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test5.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="111"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit6>
       <Unit7>
         <Filename Value="Test6.pas"/>
@@ -65,13 +67,13 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="134"/>
         <CursorPos X="11" Y="161"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit7>
       <Unit8>
         <Filename Value="Test7.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit8>
       <Unit9>
         <Filename Value="Test8.pas"/>
@@ -79,7 +81,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="62"/>
         <CursorPos X="96" Y="67"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit9>
       <Unit10>
         <Filename Value="Test9.pas"/>
@@ -87,7 +89,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="33"/>
         <CursorPos X="91" Y="52"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit10>
       <Unit11>
         <Filename Value="Test10.pas"/>
@@ -95,29 +97,30 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="86"/>
         <CursorPos X="34" Y="111"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit11>
       <Unit12>
         <Filename Value="Test11.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="48"/>
         <CursorPos X="17" Y="75"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
+        <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test12.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="102"/>
         <CursorPos X="54" Y="131"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
+        <Loaded Value="True"/>
       </Unit13>
       <Unit14>
         <Filename Value="Test13.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="4"/>
         <TopLine Value="124"/>
         <CursorPos Y="150"/>
         <ExtraEditorCount Value="1"/>
@@ -126,7 +129,7 @@
           <TopLine Value="63"/>
           <CursorPos X="40" Y="102"/>
         </ExtraEditor1>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
         <Loaded Value="True"/>
       </Unit14>
       <Unit15>
@@ -139,7 +142,7 @@
           <EditorIndex Value="-1"/>
           <CursorPos X="67" Y="12"/>
         </ExtraEditor1>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit15>
       <Unit16>
         <Filename Value="Test15.pas"/>
@@ -152,7 +155,7 @@
           <EditorIndex Value="-1"/>
           <CursorPos Y="7"/>
         </ExtraEditor1>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit16>
       <Unit17>
         <Filename Value="Test16.pas"/>
@@ -168,12 +171,12 @@
           <TopLine Value="110"/>
           <CursorPos Y="131"/>
         </ExtraEditor1>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit17>
       <Unit18>
         <Filename Value="Makefile.fpc"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
       </Unit18>
       <Unit19>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
@@ -184,17 +187,19 @@
       </Unit19>
       <Unit20>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="120"/>
-        <CursorPos X="16" Y="152"/>
+        <EditorIndex Value="11"/>
+        <TopLine Value="12916"/>
+        <CursorPos X="38" Y="12933"/>
         <UsageCount Value="12"/>
+        <Loaded Value="True"/>
       </Unit20>
       <Unit21>
         <Filename Value="../client/FBOutputBlock.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="983"/>
-        <CursorPos X="23" Y="991"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="407"/>
+        <CursorPos X="35" Y="438"/>
         <UsageCount Value="22"/>
+        <Loaded Value="True"/>
       </Unit21>
       <Unit22>
         <Filename Value="../client/FBAttachment.pas"/>
@@ -205,10 +210,11 @@
       </Unit22>
       <Unit23>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="233"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="235"/>
         <CursorPos Y="254"/>
         <UsageCount Value="29"/>
+        <Loaded Value="True"/>
       </Unit23>
       <Unit24>
         <Filename Value="../client/3.0/FB30Attachment.pas"/>
@@ -241,10 +247,11 @@
       </Unit27>
       <Unit28>
         <Filename Value="../IB.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="112"/>
-        <CursorPos X="19" Y="138"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="615"/>
+        <CursorPos X="3" Y="635"/>
         <UsageCount Value="55"/>
+        <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="runtest.sh"/>
@@ -394,10 +401,11 @@
       </Unit49>
       <Unit50>
         <Filename Value="../client/FBEvents.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="117"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="205"/>
         <CursorPos X="73" Y="144"/>
         <UsageCount Value="24"/>
+        <Loaded Value="True"/>
       </Unit50>
       <Unit51>
         <Filename Value="../client/3.0/FB30Events.pas"/>
@@ -716,8 +724,15 @@
         <CursorPos X="44" Y="409"/>
         <UsageCount Value="10"/>
       </Unit95>
+      <Unit96>
+        <Filename Value="/usr/share/fpcsrc/rtl/inc/dynlibs.pas"/>
+        <EditorIndex Value="10"/>
+        <CursorPos X="24" Y="51"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit96>
     </Units>
-    <JumpHistory Count="3" HistoryIndex="2">
+    <JumpHistory Count="21" HistoryIndex="20">
       <Position1>
         <Filename Value="testsuite.lpr"/>
         <Caret Line="85" Column="16" TopLine="60"/>
@@ -730,6 +745,77 @@
         <Filename Value="testsuite.lpr"/>
         <Caret Line="85" Column="20" TopLine="57"/>
       </Position3>
+      <Position4>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="1255" Column="29" TopLine="1221"/>
+      </Position4>
+      <Position5>
+        <Filename Value="testsuite.lpr"/>
+        <Caret Line="14" Column="21"/>
+      </Position5>
+      <Position6>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="1257" TopLine="1221"/>
+      </Position6>
+      <Position7>
+        <Filename Value="testsuite.lpr"/>
+        <Caret Line="14" Column="23"/>
+      </Position7>
+      <Position8>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="1257" TopLine="1221"/>
+      </Position8>
+      <Position9>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="157" Column="22" TopLine="120"/>
+      </Position9>
+      <Position10>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="239" Column="10" TopLine="235"/>
+      </Position10>
+      <Position11>
+        <Filename Value="/usr/share/fpcsrc/rtl/inc/dynlibs.pas"/>
+        <Caret Line="57" Column="10" TopLine="37"/>
+      </Position11>
+      <Position12>
+        <Filename Value="/usr/share/fpcsrc/rtl/inc/dynlibs.pas"/>
+        <Caret Line="165" Column="3" TopLine="136"/>
+      </Position12>
+      <Position13>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="1005" Column="63" TopLine="983"/>
+      </Position13>
+      <Position14>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+      </Position14>
+      <Position15>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="122" Column="24" TopLine="90"/>
+      </Position15>
+      <Position16>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="439" Column="19" TopLine="407"/>
+      </Position16>
+      <Position17>
+        <Filename Value="../client/FBOutputBlock.pas"/>
+        <Caret Line="438" Column="3" TopLine="407"/>
+      </Position17>
+      <Position18>
+        <Filename Value="Test4.pas"/>
+        <Caret Line="81" Column="11" TopLine="58"/>
+      </Position18>
+      <Position19>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="43" Column="15" TopLine="23"/>
+      </Position19>
+      <Position20>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="630" Column="73" TopLine="628"/>
+      </Position20>
+      <Position21>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="628" Column="50" TopLine="610"/>
+      </Position21>
     </JumpHistory>
   </ProjectSession>
   <Debugging>
